# DreamPlex

./: .gitignore  DPH_Singleton.py  DPH_WOL.py  DP_LibMain.py  DP_LibMovies.py  DP_LibShows.py  DP_ListMain.py  DP_MainMenu.py  DP_Player.py  DP_PlexLibrary.py  DP_PosterView.py  Makefile.am  README.md  RELEASENOTES.md  Rules-cpp.mak  Rules-po.mak  Rules_noxml-po.mak  __common__.py  __init__.py  __plugin__.py  configure.ac  keymap.xml  maintainer.info  plugin.py
CONTROL/: control  postinst  postrm  preinst
doc/: Makefile.am  e2-webremote-api.txt  iServiceSamples.txt  pms-api.txt
meta/: Makefile.am  plugin_dreamplex.xml
po/: Makefile.am  cs.po  de.po  en.po  en_GB.po  fr.po  updateallpo.sh
skins/MetrixHD/skin/: params
skins/MetrixHD/skin/1280x720/: skin.xml
skins/PlatinumHD/skin/: params
skins/PlatinumHD/skin/1280x720/: skin.xml
skins/blackDon/1280x720/: skin.xml
skins/blackDon/720x576/: skin.xml
skins/blackDon/skin/: params
skins/blackDon/skin/1280x720/: skin.xml
src/: DPH_Arts.py  DPH_BackdropMaker.py  DPH_MovingLabel.py  DPH_PlexGdm.py  DPH_RemoteClient.py  DPH_RemoteHandler.py  DPH_RemoteListener.py  DPH_ScreenHelper.py  DPH_Singleton.py  DPH_StillPicture.py  DPH_SubscriptionManager.py  DPH_Syncer.py  DPH_Translations.py  DPH_WOL.py  DP_About.py  DP_FilterMenu.py  DP_Help.py  DP_HelperScreens.py  DP_LibMain.py  DP_LibMixed.py  DP_LibMovies.py  DP_LibMusic.py  DP_LibShows.py  DP_ListView.py  DP_MainMenu.py  DP_Mappings.py  DP_PathSelector.py  DP_Player.py  DP_PlexLibrary.py  DP_PosterView.py  DP_Server.py  DP_ServerMenu.py  DP_Settings.py  DP_Summary.py  DP_Syncer.py  DP_SystemCheck.py  DP_Users.py  DP_View.py  DP_ViewBackdrop.py  DP_ViewCine.py  (+18 more)
src/libs/: libshowiframe.so.0.0.0  libshowiframe.so.0.0.oe20  libshowiframe.so.0.0.sh4
src/locale/cs/LC_MESSAGES/: DreamPlex.mo
src/locale/da/LC_MESSAGES/: DreamPlex.mo  DreamPlex.po
src/locale/de/LC_MESSAGES/: DreamPlex.mo  DreamPlex.po
src/locale/es/LC_MESSAGES/: DreamPlex.mo  DreamPlex.po
src/locale/fr/LC_MESSAGES/: DreamPlex.mo  DreamPlex.po
src/plugins/backdropMaker/: plugin.py
src/skin/: params
src/skin/1024x576/: skin.xml
src/skin/1280x720/: convert.py  skin.xml
src/skin/1280x720/images/ListV/: Thumbs.db
src/skin/1280x720/images/Main/: Thumbs.db
src/skin/1280x720/images/Main/icons/: Thumbs.db
src/skin/1280x720/images/Settings/: Thumbs.db
src/skin/1280x720/images/icons/: Thumbs.db
src/skin/720x576/: skin.xml
src/skins/: Makefile.am
src/skins/Plexi/: params
src/skins/Plexi/1280x720/: skin.xml
src/skins/PlexiHD/: params
src/skins/PlexiHD/1280x720/: skin.xml
src/skins/blackDon/1024x576/: skin.xml
src/skins/blackDon/1280x720/: skin.xml
src/skins/blackDon/720x576/: skin.xml
src/skins/default/: Makefile.am  params  skin.xml
src/skins/default/1280x720/: Makefile.am  skin.xml
src/skins/default/1280x720/buttons/: Makefile.am
src/skins/default/1280x720/images/: Makefile.am
src/skins/default/all/: Makefile.am
src/skins/default/icons/: Makefile.am
src/skins/default/images/: Makefile.am
src/skins/default/picons/: Makefile.am
src/skins/default_FHD/: Makefile.am  params  skin.xml
src/skins/default_FHD/buttons/: Makefile.am
src/skins/default_FHD/icons/: Makefile.am
src/skins/default_FHD/images/: Makefile.am
src/skins/default_FHD/picons/: Makefile.am
src/skins/original/: params  skin.xml
src/skins/original/1280x720/: skin.xml
